# VAGENt_modelling

./: install.sh  pyproject.toml
examples/overcooked/: train_overcooked_vision.yaml  train_ppo_qwen25vl3b.sh  val_overcooked_vision.yaml
vagen/: main_ppo.py
vagen/configs/: env_registry.yaml  vagen_multiturn.yaml
vagen/envs/overcooked/: overcooked_env.py
vagen/envs/overcooked/utils/: prompt.py  utils.py
